--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
      
                                      <!--Header-->
-    <header class="header">
+    <!-- <header class="header">
         <div class="container container-flex header--container">
             <a class="header__logo" lang="en" href="WebStudio"> <span class="logo__web web--color-btx">Web</span>Studio</a>
 
@@ -49,12 +49,12 @@
               </ul>
             </div>
         </div>
-    </header>
+    </header> -->
 
                      <!-- Main-->
     <main>
             <!-- name section-->
-        <section class="name section name-section ">
+        <!-- <section class="name section name-section ">
             <div class="container container-name">
                 <h1 class="name__text">
                     Ефективні рішення для вашого бізнесу
@@ -62,9 +62,9 @@
 
                 <button class="name_btn btn--feature" type="button" data-modal-open>Замовити послугу</button>
             </div>
-        </section>
+        </section> -->
             <!-- peculiarity section-->
-        <section class="peculiarity section ">
+        <!-- <section class="peculiarity section ">
             <div class="container ">
                 <h2 hidden>наші особливості</h2>
                
@@ -93,9 +93,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- work section-->
-        <section class="work section fithers">
+        <!-- <section class="work section fithers">
             <div class="container">
                 <h2 class="work__title title">Чим ми займаємося</h2>
                 <ul class="work__list">
@@ -131,7 +131,7 @@
 
                 </ul>
             </div>
-        </section>
+        </section> -->
             <!-- team section-->
         <section class="team section ">
             <div class="container  ">
@@ -311,7 +311,7 @@
             </div>
         </section>
             <!-- client section-->
-        <section class="client section ">
+        <!-- <section class="client section ">
             <div class="container">
                 <h2 class="client-title title">Постійні клієнти</h2>
                 <ul class="client list">
@@ -362,11 +362,11 @@
 
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <!--Footer-->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container container--footer">
             <div class="contacts">
                 <a class="contacts__web-studio" lang="en" href="WebStudio"> <span class="contacts__web web--color-btx">Web</span>Studio</a>
@@ -431,7 +431,7 @@
             </div>
 
         </div>
-    </footer>
+    </footer> -->
 
                   <!--Window-->
 
