--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </section> -->
             <!-- peculiarity section-->
-        <!-- <section class="peculiarity section ">
+        <section class="peculiarity section ">
             <div class="container ">
                 <h2 hidden>наші особливості</h2>
                
@@ -93,7 +93,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- work section-->
         <!-- <section class="work section fithers">
             <div class="container">
