--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                      <!-- Main-->
     <main>
             <!-- name section-->
-        <!-- <section class="name section name-section ">
+        <section class="name section name-section ">
             <div class="container container-name">
                 <h1 class="name__text">
                     Ефективні рішення для вашого бізнесу
@@ -62,38 +62,46 @@
 
                 <button class="name_btn btn--feature" type="button" data-modal-open>Замовити послугу</button>
             </div>
-        </section> -->
+        </section>
             <!-- peculiarity section-->
-        <section class="peculiarity section ">
+        <!-- <section class="peculiarity section ">
             <div class="container ">
                 <h2 hidden>наші особливості</h2>
                
                 <ul class="peculiarity__list">
 
                     <li class="peculiarity__item">
+                        <div class="peculiarity__thumb">
                         <h3 class="peculiarity__title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="peculiarity__text">Ідейні міркування, і навіть початок повсякденної роботи з формування
                             позиції.</p>
+                            </div>
                     </li>
 
                     <li class="peculiarity__item">
+                        <div class="peculiarity__thumb">
                         <h3 class="peculiarity__title">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="peculiarity__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у
                             себе.</p>
+                            </div>
                     </li>
 
                     <li class="peculiarity__item">
+                        <div class="peculiarity__thumb">
                         <h3 class="peculiarity__title">ПЛАНУВАННЯ</h3>
                         <p class="peculiarity__text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                        </div>
                     </li>
                     <li class="peculiarity__item">
+                        <div class="peculiarity__thumb"></div>
                         <h3 class="peculiarity__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="peculiarity__text">Значимість цих проблем настільки очевидна, що реалізація планових
                             завдань.</p>
+                            </div>
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- work section-->
         <!-- <section class="work section fithers">
             <div class="container">
@@ -133,7 +141,7 @@
             </div>
         </section> -->
             <!-- team section-->
-        <section class="team section ">
+        <!-- <section class="team section ">
             <div class="container  ">
                 <h2 class="team__title title">Наша команда</h2>
 
@@ -309,7 +317,7 @@
 
                 </ul>
             </div>
-        </section>
+        </section> -->
             <!-- client section-->
         <!-- <section class="client section ">
             <div class="container">
