--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 
 <body>
     <!--Header-->
-    <header class="header">
+    <!-- <header class="header">
         <div class="container container-flex header--container">
             <a class="header__logo" lang="en" href="WebStudio"> <span class="logo__web web--color-btx">Web</span>Studio</a>
     
@@ -48,7 +48,7 @@
                 </ul>
             </div>
         </div>
-    </header>
+    </header> -->
 
     <!-- Main-->
  
@@ -57,7 +57,7 @@
             <h1 class="port-menu__title" hidden> menu </h1>
             <div class="container">
                 <ul class="port-btn">
-                    <li class="port-btn__item blue--btn"><button class="port-btn__link button--current "
+                    <li class="port-btn__item blue--btn"><button class="port-btn__link button--current"
                             type="button">Усі</button></li>
                     <li class="port-btn__item"><button class="port-btn__link" type="button">Веб-сайти</button></li>
                     <li class="port-btn__item"><button class="port-btn__link" type="button">Додатки</button></li>
@@ -242,7 +242,7 @@
 
     </main>
 <!--Footer-->
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="container container--footer">
         <div class="contacts">
             <a class="contacts__web-studio" lang="en" href="WebStudio"> <span
@@ -308,7 +308,7 @@
         </div>
 
     </div>
-</footer>
+</footer> -->
 </body>
 
 </html>
