--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </section>
             <!-- peculiarity section-->
-        <!-- <section class="peculiarity section ">
+        <section class="peculiarity section ">
             <div class="container ">
                 <h2 hidden>наші особливості</h2>
                
@@ -101,7 +101,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- work section-->
         <!-- <section class="work section fithers">
             <div class="container">
@@ -141,7 +141,7 @@
             </div>
         </section> -->
             <!-- team section-->
-        <!-- <section class="team section ">
+        <section class="team section ">
             <div class="container  ">
                 <h2 class="team__title title">Наша команда</h2>
 
@@ -317,7 +317,7 @@
 
                 </ul>
             </div>
-        </section> -->
+        </section>
             <!-- client section-->
         <!-- <section class="client section ">
             <div class="container">
