--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
      
                                      <!--Header-->
-    <header class="header">
+    <!-- <header class="header">
         <div class="container container-flex header--container">
             <a class="header__logo" lang="en" href="WebStudio"> <span class="logo__web web--color-btx">Web</span>Studio</a>
 
@@ -50,7 +50,7 @@
             </div>
             <button class="menu-open" type="button" >0</button>
         </div>
-    </header>
+    </header> -->
 
                      <!-- Main-->
     <main>
@@ -443,7 +443,7 @@
     </main>
 
     <!--Footer-->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container container--footer">
             <div class="contacts">
                 <a class="contacts__web-studio" lang="en" href="WebStudio"> <span class="contacts__web web--color-btx">Web</span>Studio</a>
@@ -508,7 +508,7 @@
             </div>
 
         </div>
-    </footer> -->
+    </footer>
 
                   <!--Window-->
 
