--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
      
                                      <!--Header-->
-    <!-- <header class="header">
+    <header class="header">
         <div class="container container-flex header--container">
             <a class="header__logo" lang="en" href="WebStudio"> <span class="logo__web web--color-btx">Web</span>Studio</a>
 
@@ -50,7 +50,7 @@
             </div>
             <button class="menu-open" type="button" >0</button>
         </div>
-    </header> -->
+    </header>
 
                      <!-- Main-->
     <main>
@@ -65,7 +65,7 @@
             </div>
         </section> -->
             <!-- peculiarity section-->
-        <!-- <section class="peculiarity section ">
+        <section class="peculiarity section ">
             <div class="container ">
                 <h2 hidden>наші особливості</h2>
                
@@ -102,7 +102,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- work section-->
         <!-- <section class="work section fithers">
             <div class="container">
@@ -511,7 +511,7 @@
     </footer>
 
                   <!--Window-->
-
+<!-- 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal__close" data-modal-close>
@@ -570,7 +570,7 @@
                 <button class="modal-button btn--feature" type="submit">Відправити </button>
             </form>
         </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
 </body>
 
