--- a/portfolio.html
+++ b/portfolio.html
@@ -68,11 +68,23 @@
             <!-- card -->
                 <ul class="menu-project">
                     <li class="menu-project__item">
-
+                      <div class="card-thumb">
                         <a class="card-project" href="card-project">
-                            <div class="card-thumb">
-                                <img class="card-thumb__img" src="./img/portfolio1.jpg" alt="Технокряк" width="370"
-                                    height="294" />
+                            <picture>
+                                <source srcset="
+                                                             ./img/portfolio1.jpg 1x,
+                                                             ./img/portfolio1-2x.jpg 2x
+                                                             " media="(min-width: 1200px)" />
+                                <source srcset="
+                                                            ./img/portfolio1-tab.jpg 1x,
+                                                            ./img/portfolio1-tab-2x.jpg 2x
+                                                              " media="(min-width: 768px)" />
+                                <source srcset="
+                                                             ./img/portfolio1-mob.jpg 1x,
+                                                             ./img/portfolio1-mob-2x.jpg 2x
+                                                              " media="(max-width: 767px)" />
+                                <img class="card-team__img" src="./img/portfolio1.jpg" alt="Технокряк" />
+                            </picture>
                                 <p class="card-thumb__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                     це дозволить відвідувачу отримати
@@ -90,8 +102,21 @@
                     <li class="menu-project__item">
                         <a class="card-project" href="card-project">
                             <div class="card-thumb">
-                                <img class="card-thumb__img" src="./img/portfolio2.jpg"
-                                    alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+                                <picture>
+                                    <source srcset="
+                                             ./img/portfolio2.jpg 1x,
+                                             ./img/portfolio2-2x.jpg 2x
+                                             " media="(min-width: 1200px)" />
+                                    <source srcset="
+                                            ./img/portfolio2-tab.jpg 1x,
+                                            ./img/portfolio2-tab-2x.jpg 2x
+                                              " media="(min-width: 768px)" />
+                                    <source srcset="
+                                             ./img/portfolio2-mob.jpg 1x,
+                                             ./img/portfolio2-mob-2x.jpg 2x
+                                              " media="(max-width: 767px)" />
+                                    <img class="card-team__img" src="./img/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" />
+                                </picture>
                                 <p class="card-thumb__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                     це дозволить відвідувачу отримати
@@ -109,8 +134,21 @@
                     <li class="menu-project__item">
                         <a class="card-project" href="card-project">
                             <div class="card-thumb">
-                                <img class="card-thumb__img" src="./img/portfolio3.jpg" alt="Ресторан Seafood"
-                                    width="370" height="294" />
+                                <picture>
+                                    <source srcset="
+                                                  ./img/portfolio3.jpg 1x,
+                                                  ./img/portfolio3-2x.jpg 2x
+                                                  " media="(min-width: 1200px)" />
+                                    <source srcset="
+                                                 ./img/portfolio3-tab.jpg 1x,
+                                                 ./img/portfolio3-tab-2x.jpg 2x
+                                                   " media="(min-width: 768px)" />
+                                    <source srcset="
+                                                    ./img/portfolio3-mob.jpg 1x,
+                                                   ./img/portfolio3-mob-2x.jpg 2x
+                                                    " media="(max-width: 767px)" />
+                                    <img class="card-team__img" src="./img/portfolio3.jpg" alt="Ресторан Seafood" />
+                                    </picture>
                                 <p class="card-thumb__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                     це дозволить відвідувачу отримати
@@ -127,8 +165,21 @@
                     <li class="menu-project__item">
                         <a class="card-project" href="card-project">
                             <div class="card-thumb">
-                                <img class="card-thumb__img" src="./img/portfolio4.jpg" alt="Проект Prime" width="370"
-                                    height="294" />
+                                <picture>
+                                    <source srcset="
+                                                   ./img/portfolio4.jpg 1x,
+                                                   ./img/portfolio4-2x.jpg 2x
+                                                   " media="(min-width: 1200px)" />
+                                    <source srcset="
+                                                 ./img/portfolio4-tab.jpg 1x,
+                                                 ./img/portfolio4-tab-2x.jpg 2x
+                                                   " media="(min-width: 768px)" />
+                                    <source srcset="
+                                                  ./img/portfolio4-mob.jpg 1x,
+                                                 ./img/portfolio4-mob-2x.jpg 2x
+                                                  " media="(max-width: 767px)" />
+                                    <img class="card-team__img" src="./img/portfolio4.jpg" alt="Проект Prime" />
+                                </picture>
                                 <p class="card-thumb__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                     це дозволить відвідувачу отримати
@@ -145,8 +196,21 @@
                     <li class="menu-project__item">
                         <a class="card-project" href="card-project">
                             <div class="card-thumb">
-                                <img class="card-thumb__img" src="./img/portfolio5.jpg" alt="Проект Boxes" width="370"
-                                    height="294" />
+                                <picture>
+                                    <source srcset="
+                                                    ./img/portfolio5.jpg 1x,
+                                                   ./img/portfolio5-2x.jpg 2x
+                                                   " media="(min-width: 1200px)" />
+                                    <source srcset="
+                                                 ./img/portfolio5-tab.jpg 1x,
+                                                 ./img/portfolio5-tab-2x.jpg 2x
+                                                   " media="(min-width: 768px)" />
+                                    <source srcset="
+                                                  ./img/portfolio5-mob.jpg 1x,
+                                                 ./img/portfolio5-mob-2x.jpg 2x
+                                                  " media="(max-width: 767px)" />
+                                    <img class="card-team__img" src="./img/portfolio5.jpg" alt="Проект Boxes" />
+                                </picture>
                                 <p class="card-thumb__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                     це дозволить відвідувачу отримати
@@ -163,8 +227,21 @@
                     <li class="menu-project__item">
                         <a class="card-project" href="card-project">
                             <div class="card-thumb">
-                                <img class="card-thumb__img" src="./img/portfolio6.jpg"
-                                    alt="Inspiration has no Borders" width="370" height="294" />
+                                <picture>
+                                    <source srcset="
+                                                     ./img/portfolio6.jpg 1x,
+                                                    ./img/portfolio6-2x.jpg 2x
+                                                    " media="(min-width: 1200px)" />
+                                    <source srcset="
+                                                  ./img/portfolio6-tab.jpg 1x,
+                                                  ./img/portfolio6-tab-2x.jpg 2x
+                                                    " media="(min-width: 768px)" />
+                                    <source srcset="
+                                                   ./img/portfolio6-mob.jpg 1x,
+                                                  ./img/portfolio6-mob-2x.jpg 2x
+                                                   " media="(max-width: 767px)" />
+                                    <img class="card-team__img" src="./img/portfolio6.jpg" alt="Inspiration has no Borders" />
+                                </picture>
                                 <p class="card-thumb__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                     це дозволить відвідувачу отримати
@@ -182,8 +259,21 @@
                     <li class="menu-project__item">
                       <a class="card-project" href="card-project">
                             <div class="card-thumb">
-                                <img class="card-thumb__img" src="./img/portfolio7.jpg" alt="Издание Limited Edition"
-                                    width="370" height="294" />
+                            <picture>
+                                <source srcset="
+                                                  ./img/portfolio7.jpg 1x,
+                                                 ./img/portfolio7-2x.jpg 2x
+                                                 " media="(min-width: 1200px)" />
+                                <source srcset="
+                                                 ./img/portfolio7-tab.jpg 1x,
+                                                 ./img/portfolio7-tab-2x.jpg 2x
+                                                   " media="(min-width: 768px)" />
+                                <source srcset="
+                                                 ./img/portfolio7-mob.jpg 1x,
+                                                ./img/portfolio7-mob-2x.jpg 2x
+                                                 " media="(max-width: 767px)" />
+                                <img class="card-team__img" src="./img/portfolio7.jpg" alt="Издание Limited Edition" />
+                            </picture>
                                 <p class="card-thumb__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                     це дозволить відвідувачу отримати
@@ -200,8 +290,21 @@
                     <li class="menu-project__item">
                         <a class="card-project" href="card-project">
                             <div class="card-thumb">
-                                <img class="card-thumb__img" src="./img/portfolio8.jpg" alt="Проект LAB" width="370"
-                                    height="294" />
+                                <picture>
+                                    <source srcset="
+                                                      ./img/portfolio8.jpg 1x,
+                                                     ./img/portfolio8-2x.jpg 2x
+                                                     " media="(min-width: 1200px)" />
+                                    <source srcset="
+                                                   ./img/portfolio8-tab.jpg 1x,
+                                                   ./img/portfolio8-tab-2x.jpg 2x
+                                                     " media="(min-width: 768px)" />
+                                    <source srcset="
+                                                    ./img/portfolio8-mob.jpg 1x,
+                                                   ./img/portfolio8-mob-2x.jpg 2x
+                                                    " media="(max-width: 767px)" />
+                                    <img class="card-team__img" src="./img/portfolio8.jpg" alt="Проект LAB" />
+                                </picture>
                                 <p class="card-thumb__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                     це дозволить відвідувачу отримати
@@ -218,8 +321,21 @@
                     <li class="menu-project__item">
                         <a class="card-project" href="card-project">
                             <div class="card-thumb">
-                                <img class="card-thumb__img" src="./img/portfolio9.jpg" alt="Growing Business"
-                                    width="370" height="294" />
+                                <picture>
+                                    <source srcset="
+                                                    ./img/portfolio9.jpg 1x,
+                                                   ./img/portfolio9-2x.jpg 2x
+                                                   " media="(min-width: 1200px)" />
+                                    <source srcset="
+                                                 ./img/portfolio9-tab.jpg 1x,
+                                                 ./img/portfolio9-tab-2x.jpg 2x
+                                                   " media="(min-width: 768px)" />
+                                    <source srcset="
+                                                  ./img/portfolio9-mob.jpg 1x,
+                                                 ./img/portfolio9-mob-2x.jpg 2x
+                                                  " media="(max-width: 767px)" />
+                                    <img class="card-team__img" src="./img/portfolio9.jpg" alt="Growing Business" />
+                                </picture>
                                 <p class="card-thumb__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                                     це дозволить відвідувачу отримати
