--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
 
 <body>
     <!--Header-->
-    <!-- <header class="header">
-        <div class="container container-flex header--container">
-            <a class="header__logo" lang="en" href="WebStudio"> <span class="logo__web web--color-btx">Web</span>Studio</a>
-    
+<header class="header">
+    <div class="container container-flex header--container">
+        <a class="header__logo" lang="en" href="WebStudio"> <span class="logo__web web--color-btx">Web</span>Studio</a>
+        <div class="header-menu">
             <nav class="navigation">
                 <ul class="navigation__list">
                     <li class="navigation__item"> <a href="index.html" class="navigation__link ">Студія</a></li>
@@ -35,20 +35,82 @@
             <div class="connect header__connect">
                 <ul class="connect__list">
                     <li class="connect__item">
-                        <a class="connect__link" href="tell:+380961111111"> <svg class="connect__icon" width="16"
-                                height="16">
-                                <use href="./img/symbol.svg#icon-mail"></use>
+                        <a class="connect__link" href="tell:+380961111111"> <svg class="connect__icon icon-tell">
+                                <use href="./img/symbol.svg#icon-tell"></use>
                             </svg> +38 096 111 11 11</a>
                     </li>
-    
-                    <li class="header-links-contact"><a class="connect__link link_mail" href="mail:info@devstudio.com"> <svg
-                                class="connect__icon" width="16" height="16">
-                                <use href="./img/symbol.svg#icon-tell"></use>
+
+                    <li class="connect__item"><a class="connect__link link_mail" href="mail:info@devstudio.com"> <svg
+                                class="connect__icon icon-mail">
+                                <use href="./img/symbol.svg#icon-mail"></use>
                             </svg> info@devstudio.com</a></li>
                 </ul>
             </div>
         </div>
-    </header> -->
+        <button class="menu-open" type="button">
+            <svg class="menu-open__icon" width="40" height="40">
+                <use href="./img/symbol.svg#icon-menu-1"></use>
+            </svg>
+        </button>
+    </div>
+    <!--Mob--menu-->
+    <div class="mob-menu is-hidden">
+        <div class="container">
+            <div class="mob-menu-top">
+                <button type="button" class="menu-close" data-mob-menu__close>
+                    <svg class="mob-menu__icon" width="18" height="18">
+                        <use href="./img/symbol.svg#icon-close-black"></use>
+                    </svg>
+                </button>
+                <nav class="mob-menu__nav">
+                    <ul class="mob-menu__list list">
+                        <li class="mob-menu__item"> <a href="index.html" class="mob-menu__link">Студія</a></li>
+                        <li class="mob-menu__item"> <a href="portfolio.html" class="mob-menu__link">Портфоліо</a></li>
+                        <li class="mob-menu__item"> <a class="mob-menu__link" href="">Контакти</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="mob-menu-bottom">
+
+                <ul class="menu-connect">
+                    <li class="menu-connect__item">
+                        <a class="menu-connect-tell" href="tell:+380961111111">+38 096 111 11 11</a>
+                    </li>
+
+                    <li class="menu-connect__item"><a class="menu-connect-mail"
+                            href="mail:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+
+                <div class="menu-soc">
+                    <ul class="menu-soc__list">
+                        <li class="menu-soc__item">
+                            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="menu-soc__link">
+                                Instagram
+                            </a>
+                        </li>
+                        <li class="menu-soc__item">
+                            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="menu-soc__link">
+                                Twitter
+                            </a>
+                        </li>
+                        <li class="menu-soc__item">
+                            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="menu-soc__link">
+                                Facebook
+                            </a>
+                        </li>
+                        <li class="menu-soc__item">
+                            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="menu-soc__link">
+                                LinkedIn
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
 
     <!-- Main-->
  
@@ -358,7 +420,7 @@
 
     </main>
 <!--Footer-->
-<!-- <footer class="footer">
+<footer class="footer">
     <div class="container container--footer">
         <div class="contacts">
             <a class="contacts__web-studio" lang="en" href="WebStudio"> <span
@@ -412,6 +474,7 @@
         </div>
         <div class="mailing">
             <p class="mailing__info">Підпишіться на розсилку</p>
+           <div class="mailing-thumb">
             <form class="mailing-form">
                 <input type="email" class="mailing-form__input" name="user-E-mail" placeholder="E-mail" required
                     id="user-email" />
@@ -421,10 +484,12 @@
                     </svg>
                 </button>
             </form>
+            </div>
         </div>
 
     </div>
-</footer> -->
+</footer>
+<script src="./js/menu.js"></script>
 </body>
 
 </html>
