--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <div class="mob-menu-top">
 <button type="button" class="menu-close" data-mob-menu__close>
     <svg class="mob-menu__icon" width="18" height="18">
-        <use href="./img/symbol.svg#icon-close-black"></use>
+        <use href="./img/symbol.svg#icon-close_menu"></use>
     </svg>
 </button>
 <nav class="mob-menu__nav">
     <ul class="mob-menu__list list">
-        <li class="mob-menu__item"> <a href="index.html" class="mob-menu__link">Студія</a></li>
+        <li class="mob-menu__item"> <a href="index.html" class="mob-menu__link current-menu">Студія</a></li>
         <li class="mob-menu__item"> <a href="portfolio.html" class="mob-menu__link">Портфоліо</a></li>
         <li class="mob-menu__item"> <a class="mob-menu__link" href="">Контакти</a></li>
     </ul>
@@ -537,6 +537,7 @@
     <!--Footer-->
     <footer class="footer">
         <div class="container container--footer">
+           <div class="cont-soc-thumb">
             <div class="contacts">
                 <a class="contacts__web-studio" lang="en" href="WebStudio"> <span class="contacts__web web--color-btx">Web</span>Studio</a>
 
@@ -586,9 +587,10 @@
                     </li>
                 </ul>
             </div>
+            </div>
             <div class="mailing">
                 <p class="mailing__info">Підпишіться на розсилку</p>
-                <div class="mailing-thumb">
+                
                 <form class="mailing-form">
                     <input type="email" class="mailing-form__input" name="user-E-mail" placeholder="E-mail" required
                         id="user-email" />
