--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
             </div>
             <div class="mailing">
                 <p class="mailing__info">Підпишіться на розсилку</p>
-                
+                <div class="mailing-thumb">
                 <form class="mailing-form">
                     <input type="email" class="mailing-form__input" name="user-E-mail" placeholder="E-mail" required
                         id="user-email" />
