--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
            <div class="connect header__connect">
              <ul class="connect__list">
                  <li class="connect__item">
-                    <a class="connect__link" href="tell:+380961111111"> <svg class="connect__icon icon-tell" >
+                    <a class="connect__link tell-con" href="tell:+380961111111"> <svg class="connect__icon icon-tell" >
                             <use href="./img/symbol.svg#icon-tell"></use>
                         </svg> +38 096 111 11 11</a>
                  </li>
 
-                 <li class="connect__item"><a class="connect__link link_mail"
+                 <li class="connect__item"><a class="connect__link mail-con"
                         href="mail:info@devstudio.com"> <svg class="connect__icon icon-mail" >
                             <use href="./img/symbol.svg#icon-mail"></use>
                         </svg> info@devstudio.com</a></li>
@@ -590,7 +590,7 @@
             </div>
             <div class="mailing">
                 <p class="mailing__info">Підпишіться на розсилку</p>
-                <div class="mailing-thumb">
+                
                 <form class="mailing-form">
                     <input type="email" class="mailing-form__input" name="user-E-mail" placeholder="E-mail" required
                         id="user-email" />
