--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
             </nav>
            <div class="connect header__connect">
              <ul class="connect__list">
+                     <li class="connect__item"><a class="connect__link mail-con" href="mail:info@devstudio.com"> <svg
+                        class="connect__icon icon-mail">
+                        <use href="./img/symbol.svg#icon-mail"></use>
+                    </svg> info@devstudio.com</a></li>
                  <li class="connect__item">
                     <a class="connect__link tell-con" href="tell:+380961111111"> <svg class="connect__icon icon-tell" >
                             <use href="./img/symbol.svg#icon-tell"></use>
                         </svg> +38 096 111 11 11</a>
                  </li>
 
-                 <li class="connect__item"><a class="connect__link mail-con"
-                        href="mail:info@devstudio.com"> <svg class="connect__icon icon-mail" >
-                            <use href="./img/symbol.svg#icon-mail"></use>
-                        </svg> info@devstudio.com</a></li>
+                 
               </ul>
             </div>
             </div>
