--- a/portfolio.html
+++ b/portfolio.html
@@ -27,23 +27,25 @@
         <div class="header-menu">
             <nav class="navigation">
                 <ul class="navigation__list">
-                    <li class="navigation__item"> <a href="index.html" class="navigation__link ">Студія</a></li>
+                    <li class="navigation__item"> <a href="index.html" class="navigation__link">Студія</a></li>
                     <li class="navigation__item"> <a href="portfolio.html" class="navigation__link current">Портфоліо</a></li>
                     <li class="navigation__item"> <a class="navigation__link" href="">Контакти</a></li>
                 </ul>
             </nav>
             <div class="connect header__connect">
                 <ul class="connect__list">
+                    <li class="connect__item"><a class="connect__link mail-con" href="mail:info@devstudio.com"> <svg
+                                class="connect__icon icon-mail">
+                                <use href="./img/symbol.svg#icon-mail"></use>
+                            </svg> info@devstudio.com</a></li>
                     <li class="connect__item">
-                        <a class="connect__link" href="tell:+380961111111"> <svg class="connect__icon icon-tell">
+                        <a class="connect__link tell-con" href="tell:+380961111111"> <svg
+                                class="connect__icon icon-tell">
                                 <use href="./img/symbol.svg#icon-tell"></use>
                             </svg> +38 096 111 11 11</a>
                     </li>
 
-                    <li class="connect__item"><a class="connect__link link_mail" href="mail:info@devstudio.com"> <svg
-                                class="connect__icon icon-mail">
-                                <use href="./img/symbol.svg#icon-mail"></use>
-                            </svg> info@devstudio.com</a></li>
+                  
                 </ul>
             </div>
         </div>
@@ -53,19 +55,20 @@
             </svg>
         </button>
     </div>
-    <!--Mob--menu-->
+    <!--Mob menu-->
     <div class="mob-menu is-hidden">
         <div class="container">
             <div class="mob-menu-top">
                 <button type="button" class="menu-close" data-mob-menu__close>
                     <svg class="mob-menu__icon" width="18" height="18">
-                        <use href="./img/symbol.svg#icon-close-black"></use>
+                        <use href="./img/symbol.svg#icon-close_menu"></use>
                     </svg>
                 </button>
                 <nav class="mob-menu__nav">
                     <ul class="mob-menu__list list">
-                        <li class="mob-menu__item"> <a href="index.html" class="mob-menu__link">Студія</a></li>
-                        <li class="mob-menu__item"> <a href="portfolio.html" class="mob-menu__link">Портфоліо</a></li>
+                        <li class="mob-menu__item"> <a href="index.html" class="mob-menu__link">Студія</a>
+                        </li>
+                        <li class="mob-menu__item"> <a href="portfolio.html" class="mob-menu__link current-menu">Портфоліо</a></li>
                         <li class="mob-menu__item"> <a class="mob-menu__link" href="">Контакти</a></li>
                     </ul>
                 </nav>
@@ -422,59 +425,61 @@
 <!--Footer-->
 <footer class="footer">
     <div class="container container--footer">
-        <div class="contacts">
-            <a class="contacts__web-studio" lang="en" href="WebStudio"> <span
-                    class="contacts__web web--color-btx">Web</span>Studio</a>
+        <div class="cont-soc-thumb">
+            <div class="contacts">
+                <a class="contacts__web-studio" lang="en" href="WebStudio"> <span
+                        class="contacts__web web--color-btx">Web</span>Studio</a>
 
-            <address class="address">
-                <ul class="address__list">
-                    <li class="address__item-maps"><a class="address__link-maps"
-                            href="https://goo.gl/maps/HctgpP5rHjkdvr9f7" target="_blank"
-                            rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="address__item"><a class="address__link" href="tell:+380961111111">+38
-                            096 111 11 11</a></li>
-                    <li class="address__item"><a class="address__link"
-                            href="mail:info@devstudio.com">info@devstudio.com</a></li>
+                <address class="address">
+                    <ul class="address__list">
+                        <li class="address__item-maps"><a class="address__link-maps"
+                                href="https://goo.gl/maps/HctgpP5rHjkdvr9f7" target="_blank"
+                                rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li class="address__item"><a class="address__link" href="tell:+380961111111">+38
+                                096 111 11 11</a></li>
+                        <li class="address__item"><a class="address__link"
+                                href="mail:info@devstudio.com">info@devstudio.com</a></li>
+                    </ul>
+                </address>
+            </div>
+
+            <div class="socials">
+                <p class="socials__info">приєднуйтесь</p>
+                <ul class="socials__list list">
+                    <li class="socials__item">
+                        <a href="" class="socials__link link">
+                            <svg class="socials__icon" width="20" height="20">
+                                <use href="./img/icon.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+
+                    <li class="socials__item">
+                        <a href="" class="socials__link link">
+                            <svg class="socials__icon" width="20" height="20">
+                                <use href="./img/icon.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="" class="socials__link link">
+                            <svg class="socials__icon" width="20" height="20">
+                                <use href="./img/icon.svg#icon-facebook"></use>
+                            </svg></a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="" class="socials__link link">
+                            <svg class="socials__icon" width="20" height="20">
+                                <use href="./img/icon.svg#icon-linkedin"></use>
+                            </svg></a>
+                    </li>
                 </ul>
-            </address>
-        </div>
-
-        <div class="socials">
-            <p class="socials__info">приєднуйтесь</p>
-            <ul class="socials__list list">
-                <li class="socials__item">
-                    <a href="" class="socials__link link">
-                        <svg class="socials__icon" width="20" height="20">
-                            <use href="./img/icon.svg#icon-instagram"></use>
-                        </svg>
-                    </a>
-                </li>
-
-
-                <li class="socials__item">
-                    <a href="" class="socials__link link">
-                        <svg class="socials__icon" width="20" height="20">
-                            <use href="./img/icon.svg#icon-twitter"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="socials__item">
-                    <a href="" class="socials__link link">
-                        <svg class="socials__icon" width="20" height="20">
-                            <use href="./img/icon.svg#icon-facebook"></use>
-                        </svg></a>
-                </li>
-                <li class="socials__item">
-                    <a href="" class="socials__link link">
-                        <svg class="socials__icon" width="20" height="20">
-                            <use href="./img/icon.svg#icon-linkedin"></use>
-                        </svg></a>
-                </li>
-            </ul>
+            </div>
         </div>
         <div class="mailing">
             <p class="mailing__info">Підпишіться на розсилку</p>
-           <div class="mailing-thumb">
+
             <form class="mailing-form">
                 <input type="email" class="mailing-form__input" name="user-E-mail" placeholder="E-mail" required
                     id="user-email" />
@@ -484,11 +489,12 @@
                     </svg>
                 </button>
             </form>
-            </div>
         </div>
+    </div>
 
     </div>
 </footer>
+
 <script src="./js/menu.js"></script>
 </body>
 
