--- a/index.html
+++ b/index.html
@@ -546,11 +546,14 @@
                     <ul class="address__list">
                         <li class="address__item-maps"><a class="address__link-maps"
                                 href="https://goo.gl/maps/HctgpP5rHjkdvr9f7" target="_blank"
-                                rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+                                rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+                            </li>
+                         <li class="address__item"><a class="address__link" href="mail:info@devstudio.com">info@devstudio.com</a>
+                        </li>
                         <li class="address__item"><a class="address__link" href="tell:+380961111111">+38
-                                096 111 11 11</a></li>
-                        <li class="address__item"><a class="address__link"
-                                href="mail:info@devstudio.com">info@devstudio.com</a></li>
+                                096 111 11 11</a>
+                            </li>
+                        
                     </ul>
                 </address>
             </div>
@@ -600,11 +603,9 @@
                             <use href="./img/symbol.svg#icon-icon-send"></use>
                         </svg>
                     </button>
-                </form>
+                 </form>
                 </div>
-            </div>
-
-        </div>
+            </div> 
     </footer>
 
                   <!--Window-->
