--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
 
 
     <!-- Main-->
- 
+<main>
             <!-- menu -->
         <section class="section port-menu ">
             <h1 class="port-menu__title" hidden> menu </h1>
@@ -413,14 +413,9 @@
                             </div>
                         </a>
                     </li>
-
                 </ul>
             </div>
-
-
-
         </section>
-
     </main>
 <!--Footer-->
 <footer class="footer">
@@ -429,16 +424,16 @@
             <div class="contacts">
                 <a class="contacts__web-studio" lang="en" href="WebStudio"> <span
                         class="contacts__web web--color-btx">Web</span>Studio</a>
-
                 <address class="address">
                     <ul class="address__list">
                         <li class="address__item-maps"><a class="address__link-maps"
                                 href="https://goo.gl/maps/HctgpP5rHjkdvr9f7" target="_blank"
                                 rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li class="address__item"><a class="address__link" href="mail:info@devstudio.com">info@devstudio.com</a>
+                        </li>
                         <li class="address__item"><a class="address__link" href="tell:+380961111111">+38
-                                096 111 11 11</a></li>
-                        <li class="address__item"><a class="address__link"
-                                href="mail:info@devstudio.com">info@devstudio.com</a></li>
+                                096 111 11 11</a>
+                        </li>
                     </ul>
                 </address>
             </div>
@@ -490,8 +485,6 @@
                 </button>
             </form>
         </div>
-    </div>
-
     </div>
 </footer>
 
